removed css folder and added margin to the main content instead of padding to avoid flickering

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -32,7 +32,7 @@ body {
 	z-index: 9999;
 }
 .main {
-	padding-top: 80px;
+	margin-top: 70px;
 	@include mobile-portrait {
 		padding-top: 10px;
 	}
